# voxlume

./: .dockerignore  .gitignore  Cargo.toml  GEMINI.md  README.md  TODO  config.json  config.toml  docker-compose-server.yaml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build_and_publish.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/pages/: about_page.rs  audiobook_page.rs  author_page.rs  by_series_page.rs  category_page.rs  homepage.rs  keyword_page.rs  login.rs  logout.rs  mod.rs  most_recent_page.rs  reader_page.rs  register.rs  roadmap_page.rs  search_page.rs
app/src/pages/notifications/: mod.rs  notifications_page.rs
app/src/pages/subscriptions/: manage_subscription_page.rs  mod.rs
app/src/ui_components/: audiobook_container.rs  footer.rs  mod.rs  navbar.rs  searchbar.rs  theme_toggler.rs  user_login_component.rs  user_logout_component.rs  user_register_component.rs
app/src/ui_components/ads/: grid_ad.rs  mod.rs
app/src/ui_components/audiobook/: audiobook_container.rs  audiobook_detailed_view.rs  audiobook_grid.rs  audiobook_list.rs  audiobook_table.rs  link_author.rs  link_reader.rs  link_series.rs  mod.rs  tag_category.rs  tag_keyword.rs
app/src/ui_components/navbar/: display_mode.rs  mod.rs  navbar_impl.rs  notifications_entry.rs  searchbar.rs  theme_toggler.rs
app/src/ui_components/paginator/: mod.rs
app/src/ui_components/sidebar/: mod.rs  sidebar_impl.rs
app/src/ui_components/subscriptions/: mod.rs  subscriptions_panel.rs
app/src/utils/: dates.rs  local_storage.rs  mod.rs  sidebar.rs
cli/: Cargo.toml
cli/src/: cli_args.rs  main.rs  queue_messages.rs
cli/src/notifications/: entrypoints.rs
cli/src/refresh_search_index/: mod.rs
cli/src/scraping/: entrypoints.rs  hardcover.rs  mod.rs  prompts.rs  queue_items.rs  scrape_impl.rs
cli/src/scraping/utils/: db.rs  gemini_extraction.rs  hardcover_ops.rs  html.rs  http.rs  mod.rs
docker/: Dockerfile.app  Dockerfile.cli
frontend/: Cargo.toml
frontend/src/: lib.rs
model/entities_lib/: Cargo.toml
model/entities_lib/src/: error.rs  lib.rs
model/entities_lib/src/entities/: audiobook.rs  audiobook_display.rs  audiobook_requests.rs  author.rs  book.rs  category.rs  change_list.rs  enums.rs  hardcover.rs  keyword.rs  meta_request.rs  mod.rs  notifications.rs  oauth_token.rs  prelude.rs  reader.rs  search_query.rs  series.rs  session.rs  shareable_args.rs  subscription.rs  theme.rs  user.rs
model/migration/: Cargo.toml
model/migration/src/: lib.rs  m20250119_000001_create_change_list_entity.rs  m20250225_181822_create_book_table.rs
model/migrations/: 20250425182317_users.sql  20250816132100_audiobook.sql  20251214100000_hardcover_metadata.down.sql  20251214100000_hardcover_metadata.sql
model/migrations/neo4j/: index.cypher
obsidian/voxlume/: Server work.md  UI work.md
obsidian/voxlume/.obsidian/: hotkeys.json  workspace.json
public/: ads.txt  ads_script.js  robots.txt
python_cli/: configuration.json5  pyproject.toml
python_cli/src/python_cli/: .null-ls_486813_custom_types.py  __init__.py  configuration.py  custom_types.py  entities.py  main.py
python_cli/src/python_cli/agent/: agent.py  agent_di_module.py
python_cli/src/python_cli/db/: __init__.py  db_di_module.py  neo4j.py
python_cli/src/python_cli/utils/agent_state/: __init__.py
python_cli/src/python_cli/utils/html/: __init__.py
python_cli/src/python_cli/utils/http/: __init__.py
python_cli/src/python_cli/utils/urls/: __init__.py
server/: Cargo.toml
server/src/: args.rs  handlers.rs  main.rs  setup.rs
shared/: Cargo.toml
shared/src/: auth_user.rs  db_trait.rs  graph_trait.rs  lib.rs  password_handler.rs  private_args.rs  shared_args.rs  sql_user.rs  state.rs
shared/src/db_ops/: mod.rs
shared/src/db_ops/parade/: audiobook_ops.rs  meta_ops.rs  mod.rs  notifications.rs  save_ops.rs  search_ops.rs  subscription_ops.rs
shared/src/db_ops/pgmq/: mod.rs
shared/src/utils/: gemini.rs
style/: _index.scss  aistudyhelp.scss  main.scss
terraform/: .terraform.lock.hcl  docker_images.tf  main.tf  neo4j.tf  pgmq.tf  postgres.tf  redis.tf  secrets.tf  variables.tf
