# cargo-features = ["codegen-backend"]
[workspace]
resolver = "2"
members = [
    "app",
    "frontend",
    "model/entities_lib",
    "model/migration",
    "server",
    "shared",
]
name = "cirp"

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = { version = "0.7", features = ["nightly"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7", features = ["nightly"] }
leptos_axum = { version = "0.7" }

anyhow = { version = "1.0.91" }
axum = { version = "=0.7.9", features = ["macros"] }
axum_session = { version = "0.16.0" }
axum_session_auth = { version = "0.16.0" }
axum_session_sqlx = { version = "0.5.0" }
base64 = "0.22.1"
bytes = { version = "1.8.0" }
cfg-if = { version = "*" }
chrono = { version = "0.4.39" }
clap = { version = "*" }
console_error_panic_hook = "0.1"
console_log = "1"
derive_more = { version = "*", features = ["from"] }
futures = { version = "*" }
futures-util = { version = "*" }
googletest = { version = "*" }
hex-literal = { version = "*" }
http = { version = "*" }
indoc = { version = "2" }
leptos-use = { version = "*" }
log = "0.4"
markdown = { version = "1.0.0-alpha.21" }
neo4rs = { version = "*" }
prost = { version = "0.13.3" }
prost-build = { version = "0.13.3" }
rand = "0.8"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "*" }
sha3 = { version = "*" }
shaku = { version = "*", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "json",
    "macros",
] }
sea-orm = { version = "1.1.4", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
strfmt = { version = "0.2.4" }
test-log = { version = "*" }
thiserror = { version = "2.0.11" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = { version = "0.1" }
uuid = { version = "*", features = ["v7", "fast-rng"] }
wasm-bindgen = "0.2"
web-sys = { version = "*" }


# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[[workspace.metadata.leptos]]
name = "cirp"
# the package in the workspace that contains the server binary (binary crate)
bin-package = "server"

# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "frontend"


# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/_index.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = []

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
