[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }


argon2 = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
axum_session_sqlx = { workspace = true, optional = true }
entities_lib = { path = "../model/entities_lib", optional = true }
neo4rs = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
  "Document",
  "Element",
  "HtmlElement",
  # "LocalStorage",
  "Storage",
  "Window",
] }
log = { workspace = true, optional = true }
shared = { path = "../shared", default-features = false, optional = true }
sqlx = { workspace = true, optional = true }
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }

[features]
default = []
hydrate = [
  "leptos/hydrate",
  # "leptos_router/hydrate",
  "dep:web-sys",
  "entities_lib/hydrate",
]
ssr = [
  "dep:argon2",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "dep:shared",
  "entities_lib/ssr",
  "dep:log",
  "dep:neo4rs",
  "dep:axum_session",
  "dep:axum_session_auth",
  "dep:axum_session_sqlx",
  "dep:sqlx",
  "dep:tokio",
  "dep:web-sys",
]
