[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
shared = { path = "../shared", default-features = false, features = [] }


leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_axum = { workspace = true }

axum = { workspace = true, features = ["macros"] }
axum_session = { workspace = true }
axum_session_auth = { workspace = true }
axum_session_sqlx = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cfg-if = { workspace = true }
console_error_panic_hook = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
indoc = { workspace = true }
leptos-use = { workspace = true }
log = { workspace = true }
markdown = { workspace = true, optional = false }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha3 = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "json",
] }
strfmt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
anyhow = { workspace = true }
hex-literal = { workspace = true }
web-sys = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
