# Module that contains all the implementations that are used only by
# the server. Specifically, only when compiling using `ssr` feature.
[package]
name = "shared"
version = "0.1.0"
edition = "2021"


[dependencies]

entities_lib = { path = "../model/entities_lib", default-features = false, features = [
  "ssr",
] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
leptos_router = { workspace = true }

anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum_session = { workspace = true }
axum_session_auth = { workspace = true }
axum_session_sqlx = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
indoc = { workspace = true }
neo4rs = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true }
strfmt = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
