[package]
name = "entities_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
cfg-if = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
derive_more.workspace = true
futures.workspace = true
neo4rs = { workspace = true, optional = true }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
shaku.workspace = true
sqlx = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true, features = ["macros", "test-util"] }

[features]
default = []
ssr = ["dep:neo4rs", "dep:sqlx"]
hydrate = []
